2003-12-04 Jim Garlick <garlick@llnl.gov>

    * etc/cyclades-pm8.dev: fixed status script to not fail intermittently
    depending on breakdown of partial reads.

2003-12-03 Albert Chu <chu11@llnl.gov>

    * /etc/ipmipower.dev: Removed "timed out" as acceptable message to
    indicate power is off.  Power status should be unknown when there
    is a timeout.
 
2003-12-02 Jim Garlick <garlick@llnl.gov>

    * man/powerman-devices.7: Added.

2003-12-02 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Replaced "failed to connect" with "timed out" 
    and "not discovered".

2003-11-30 Jim Garlick <garlick@llnl.gov>

    * src/wrappers.[ch], src/device.[ch], src/client.[ch], powermand.c:
    Add logic to use poll() if available, or select() if not.  This gets
    around the fixed 1024 bit size of FD_SETS used with select under Linux,
    which effectively limited the maximum number of devices to under 1024.

2003-11-30 Jim Garlick <garlick@llnl.gov>

    * src/powerman.c: handle partial reads on powermand socket.
    Fixes the very occasional 'unexpected response from server' errors.

    * src/powerman.c: don't initiate connect to server until options
    have been validated (avoids 'client read returned EOF' messages
    from server when someone mistypes a command).

    * src/client_proto.h, src/client.c: add connect_state to device query
    output.

    * test/vpcd.c, test/mkconf.pl, etc/vpc.dev: change vpcd plugs from 8 to 16.

    * src/pty.c: fixed _ptym_open to work beyond 176 ptys on Linux (up to 256).

    * test/Makefile: targets for testing scalability

    * test/testing.txt: added.

    * src/Makefile, src/debug.h: make dbg() macro a noop out if NDEBUG defined.

    * : tag powerman-1-0-18-prepoll

2003-11-28 Jim Garlick <garlick@llnl.gov>

    * src/wrappers.c, src/powerman.c, src/device_tcp.c: make Connect()
    non-fatal on ECONNREFUSED.

    * src/powermand.c: make daemonization happen after cli_listen() so